<resources>
    <string name="app_name">Dino Pedia</string>
    <string name="icon_famili_info">Ikon Famili</string>
    <string name="famili_info">Nama Famili</string>
    <string name="deskripsi_info">Deskripsi</string>
    <string name="periode_info">Periode Hidup</string>
    <string name="karakteristik_info">Karakteristik</string>
    <string name="habitat_info">Habitat</string>
    <string name="perilaku_info">Perilaku</string>
    <string name="klasifikasi_info">Klasifikasi</string>
    <string-array name="famili_data">
        <item>Theropoda</item>
        <item>Sauropodomorpha</item>
        <item>Ornithischia</item>
        <item>Ceratopsia</item>
        <item>Hadrosauridae</item>
        <item>Therizinosauria</item>
        <item>Ankylosauria</item>
        <item>Pterosauria</item>
    </string-array>
    <string-array name="icon_data">
        <item>@drawable/famili1</item>
        <item>@drawable/famili2</item>
        <item>@drawable/famili3</item>
        <item>@drawable/famili4</item>
        <item>@drawable/famili5</item>
        <item>@drawable/famili6</item>
        <item>@drawable/famili7</item>
        <item>@drawable/famili8</item>
    </string-array>
    <string-array name="deskripsi_data">
        <item>Dinosaurus karnivora bipedal dengan kaki panjang, cakar tajam, dan rahang yang dilengkapi dengan gigi tajam.</item>
        <item>Dinosaurus herbivora dengan tubuh besar, leher panjang, dan ekor yang panjang.</item>
        <item>Dinosaurus herbivora dengan rahang khusus yang berbentuk seperti paruh burung.</item>
        <item>Dinosaurus ini terkenal dengan tanduk dan bentuk tubuhnya yang besar.</item>
        <item>Kelompok ini juga dikenal sebagai "dinosaurus bebek" karena rahang mereka yang datar dan gigi yang cocok untuk mengunyah tumbuhan.</item>
        <item>Dinosaurus ini memiliki ciri-ciri unik seperti cakar panjang dan leher yang panjang.</item>
        <item>Dinosaurus ini memiliki tubuh yang dilapisi oleh duri dan lempengan tulang.</item>
        <item>Meskipun bukan dinosaurus dalam arti sejati, pterosaur adalah reptil terbang yang hidup bersama-sama dengan dinosaurus.</item>
    </string-array>
    <string-array name="periode_data">
        <item>Hidup selama periode Trias hingga Kretaseus.</item>
        <item>Umumnya hidup selama periode Jura hingga Kretaseus.</item>
        <item>Kebanyakan hidup selama periode Jura dan Kretaseus.</item>
        <item>Umumnya hidup selama periode Kapur Akhir, sekitar 76 hingga 66 juta tahun yang lalu.</item>
        <item>Umumnya hidup selama periode Kapur, sekitar 90 hingga 65 juta tahun yang lalu.</item>
        <item>Umumnya hidup selama periode Kapur Awal hingga Kapur Akhir, sekitar 145 hingga 66 juta tahun yang lalu.</item>
        <item>Umumnya hidup selama periode Kapur, sekitar 125 hingga 66 juta tahun yang lalu.</item>
        <item>Umumnya hidup selama periode Jura hingga Kapur Akhir, sekitar 210 hingga 66 juta tahun yang lalu.</item>
    </string-array>
    <string-array name="karakteristik_data">
        <item>Umumnya memiliki tubuh yang ramping, kepala besar dengan rahang yang dilengkapi gigi tajam, dan sering kali memiliki cakar yang kuat di kaki depan.</item>
        <item>Memiliki tubuh besar dengan kaki yang kuat, leher panjang untuk meraih daun-daun tinggi, dan ekor yang panjang untuk keseimbangan.</item>
        <item>Memiliki rahang yang dilengkapi dengan gigi-gigi pengunyah yang cocok untuk mengunyah tumbuhan.</item>
        <item>Umumnya memiliki tanduk dan bentuk tubuh yang besar.</item>
        <item>Rahang mereka datar dan gigi yang cocok untuk mengunyah tumbuhan.</item>
        <item>Cakar panjang dan leher yang panjang.</item>
        <item>Tubuh yang dilapisi oleh duri dan lempengan tulang.</item>
        <item>Reptil terbang yang hidup bersama-sama dengan dinosaurus.</item>
    </string-array>
    <string-array name="habitat_data">
        <item>Ditemukan di berbagai habitat, termasuk dataran terbuka, hutan, dan daerah rawa-rawa.</item>
        <item>Biasanya ditemukan di dataran rendah, dataran banjir, dan hutan berawa.</item>
        <item>Hidup di berbagai habitat, termasuk hutan, padang rumput, dan wilayah berawa.</item>
        <item>Ditemukan di berbagai wilayah, termasuk dataran tinggi, dataran rendah, hutan, dan dataran berawa.</item>
        <item> Biasanya hidup di wilayah berawa, dataran banjir, dan daerah dengan sumber air yang melimpah.</item>
        <item>Hidup di berbagai tipe habitat, termasuk hutan, dataran tinggi, dan daerah berawa.</item>
        <item>Biasanya ditemukan di daerah-daerah yang berawa atau berawa-rawa, tetapi juga dapat ditemukan di dataran tinggi dan daerah pedalaman yang berhutan.</item>
        <item>Terbang di udara, tetapi mungkin beristirahat dan berkembang biak di daerah-daerah pesisir, hutan, dan dataran terbuka.</item>
    </string-array>
    <string-array name="perilaku_data">
        <item>Diperkirakan bahwa beberapa theropoda berburu secara sosial, sementara yang lain mungkin menjadi pemangsa soliter.</item>
        <item>Sauropodomorpha diyakini berperilaku herbivora, menghabiskan sebagian besar waktu mereka makan dan mencari makanan.</item>
        <item>Diperkirakan menjadi herbivora dan mungkin memiliki perilaku sosial untuk melindungi diri dari pemangsa.</item>
        <item>Ceratopsia diyakini memiliki perilaku herbivora, yang berarti mereka menghabiskan sebagian besar waktu mereka mencari dan mengonsumsi tumbuhan.</item>
        <item>Hadrosauridae juga dikenal sebagai "dinosaurus bebek" karena rahang mereka yang datar dan gigi yang cocok untuk mengunyah tumbuhan.</item>
        <item>Therizinosauria diperkirakan memiliki perilaku herbivora, dengan cakar panjang mereka digunakan untuk mencabik tumbuhan.</item>
        <item>Ankylosauria dikenal memiliki tubuh yang dilapisi oleh duri dan lempengan tulang, yang berfungsi sebagai perlindungan dari pemangsa.</item>
        <item>Pterosauria, meskipun bukan dinosaurus dalam arti sejati, diperkirakan memiliki perilaku terbang yang aktif.</item>
    </string-array>
    <string-array name="klasifikasi_data">
        <item>Contoh terkenal termasuk Tyrannosaurus rex, Velociraptor, dan Spinosaurus.</item>
        <item>Contoh termasuk Brachiosaurus, Diplodocus, dan Apatosaurus.</item>
        <item>Contoh termasuk Triceratops, Stegosaurus, dan Ankylosaurus.</item>
        <item>Contoh terkenal termasuk Triceratops, Styracosaurus, dan Protoceratops.</item>
        <item>Contoh termasuk Parasaurolophus, Edmontosaurus, dan Maiasaura.</item>
        <item>Contoh termasuk Therizinosaurus, Nothronychus, dan Beipiaosaurus.</item>
        <item>Contoh termasuk Ankylosaurus, Euoplocephalus, dan Nodosaurus.</item>
        <item>Contoh termasuk Pteranodon, Quetzalcoatlus, dan Dimorphodon.</item>
    </string-array>
    <string name="icon_dino_info">Ikon Dino</string>
    <string name="nama_dino_info">Nama Dino</string>
    <string name="deskripsi_dino_info">Deskripsi Dino</string>
    <string name="karakteristik_dino_info">Karakteristik Dino</string>
    <string name="kelompok_dino_info">Kelompok Dino</string>
    <string name="habitat_dino_info">Habitat Dino</string>
    <string name="makanan_dino_info">Makanan Dino</string>
    <string name="panjang_dino_info">Panjang Dino</string>
    <string name="tinggi_dino_info">Tinggi Dino</string>
    <string name="bobot_dino_info">Bobot Dino</string>
    <string name="kelemahan_dino_info">Kelemahan Dino</string>
    <string-array name="start_dino">
        <item>0</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
    </string-array>
    <string-array name="end_dino">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>9</item>
        <item>11</item>
        <item>13</item>
        <item>15</item>
    </string-array>
    <string-array name="nama_dino">
        <item>Tyrannosaurus Rex</item>
        <item>Triceratops</item>
        <item>Velociraptor</item>
        <item>Brachiosaurus</item>
        <item>Stegosaurus</item>
        <item>Allosaurus</item>
        <item>Ankylosaurus</item>
        <item>Pteranodon</item>
        <item>Spinosaurus</item>
        <item>Parasaurolophus</item>
        <item>Archaeopteryx</item>
        <item>Diplodocus</item>
        <item>Compsognathus</item>
        <item>Allosaurus</item>
        <item>Iguanodon</item>
        <item>Brontosaurus</item>
    </string-array>
    <string-array name="gambar_dino">
        <item>@drawable/dino1</item>
        <item>@drawable/dino2</item>
        <item>@drawable/dino3</item>
        <item>@drawable/dino4</item>
        <item>@drawable/dino5</item>
        <item>@drawable/dino6</item>
        <item>@drawable/dino7</item>
        <item>@drawable/dino8</item>
        <item>@drawable/dino9</item>
        <item>@drawable/dino10</item>
        <item>@drawable/dino11</item>
        <item>@drawable/dino12</item>
        <item>@drawable/dino13</item>
        <item>@drawable/dino14</item>
        <item>@drawable/dino15</item>
        <item>@drawable/dino16</item>
    </string-array>
    <string-array name="deskripsi_dino">
        <item>Tyrannosaurus Rex adalah dinosaurus karnivora besar yang hidup pada masa Kapur Akhir.</item>
        <item>Triceratops adalah dinosaurus herbivora bertanduk besar yang hidup di wilayah Amerika Utara.</item>
        <item>Velociraptor adalah dinosaurus predator kecil dan cerdas yang hidup di Asia pada masa Kapur Akhir.</item>
        <item>Brachiosaurus adalah dinosaurus herbivora raksasa dengan leher panjang yang hidup di wilayah yang sekarang menjadi Amerika Utara.</item>
        <item>Stegosaurus adalah dinosaurus herbivora dengan cakar dan punggung berderet piringan yang hidup pada masa Jura Akhir.</item>
        <item>Allosaurus adalah dinosaurus karnivora besar yang menjadi predator utama di habitatnya selama periode Jura.</item>
        <item>Ankylosaurus adalah dinosaurus herbivora berat dengan pelindung berduri di punggungnya yang hidup pada masa Kapur Akhir.</item>
        <item>Pteranodon adalah reptil terbang besar yang hidup pada masa Kapur Akhir dan tidak termasuk dalam kategori dinosaurus sejati.</item>
        <item>Spinosaurus adalah dinosaurus karnivora raksasa dengan punggung berjumbai yang hidup di wilayah yang sekarang menjadi Afrika Utara.</item>
        <item>Parasaurolophus adalah dinosaurus herbivora dengan crests besar di kepalanya yang hidup di Amerika Utara pada masa Kapur Akhir.</item>
        <item>Archaeopteryx adalah salah satu spesies burung purba yang memiliki ciri-ciri dinosaurus, hidup pada periode Jura Akhir.</item>
        <item>Diplodocus adalah dinosaurus herbivora raksasa dengan leher panjang dan ekor yang hidup di Amerika Utara pada masa Jura Akhir.</item>
        <item>Compsognathus adalah dinosaurus karnivora kecil yang hidup di wilayah Eropa pada masa Jura Akhir.</item>
        <item>Allosaurus adalah dinosaurus karnivora besar yang menjadi predator utama di habitatnya selama periode Jura.</item>
        <item>Iguanodon adalah dinosaurus herbivora berjalan dengan dua atau empat kaki yang hidup di wilayah Eropa pada masa Kapur Akhir.</item>
        <item>Brontosaurus adalah dinosaurus herbivora raksasa dengan leher panjang yang hidup di Amerika Utara pada masa Jura Akhir.</item>
    </string-array>
</resources>